<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad_ventas">

    <TextView
        android:id="@+id/tituloLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_ventas"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/dosis_semi_bold"
        android:textSize="25sp"
        android:textColor="@color/color_etiquetas_titulo"
        />

    <EditText
        android:id="@+id/cantidadArticulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_ventas"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/codigoArticulo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/cantidadArticulos"
        android:hint="@string/hint_articuloCodigo"
        android:singleLine="false"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/scanear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloLayout"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/color_botones"
        android:text="SCAN"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/codigoArticulo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="50dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaVentasReciclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/teko_titulos"
        android:text="TOTAL Q."
        android:textSize="30sp" />

    <Button
        android:id="@+id/botonGrabarVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/font_botones"
        android:text="@string/boton_ventas"
        android:textSize="30sp" />

</RelativeLayout>